--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@ionic-native/camera": "^5.15.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.15.1",
-    "@ionic-native/keyboard": "^5.15.1",
+    "@ionic-native/keyboard": "^5.16.0",
+    "@ionic-native/native-keyboard": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -33,6 +34,7 @@
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-native-keyboard": "^2.0.5",
     "core-js": "^2.5.4",
     "firebase": "^7.2.2",
     "rxjs": "~6.5.1",
@@ -84,7 +86,12 @@
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-native-keyboard": {
+        "LICENSE": "TRIAL",
+        "LIC_ANDROID": "TRIAL",
+        "LIC_IOS": "TRIAL"
+      }
     },
     "platforms": [
       "android",
