--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "update": "ng update",
+    "update": "ng update -C",
     "cli": "ng update @angular/cli@8",
-    "core": "ng update @angular/core@8",
+    "core": "ng update @angular/core@9 -C",
     "fire": "ng update @angular/fire"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/fire": "^5.2.1",
-    "@angular/forms": "~8.1.2",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/common": "^16.2.2",
+    "@angular/compiler": "^8.1.2",
+    "@angular/core": "^16.2.2",
+    "@angular/fire": "^7.6.1",
+    "@angular/forms": "^16.2.2",
+    "@angular/platform-browser": "^16.2.2",
+    "@angular/platform-browser-dynamic": "^16.2.2",
+    "@angular/router": "^16.2.2",
     "@ionic-native/camera": "^5.15.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.15.1",
@@ -32,48 +32,48 @@
     "@ionic-native/native-keyboard": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.7.1",
-    "cordova-android": "^8.1.0",
-    "cordova-ios": "^5.0.1",
+    "@ionic/angular": "^7.3.1",
+    "cordova-android": "^12.0.0",
+    "cordova-ios": "^7.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-native-keyboard": "^2.0.5",
     "core-js": "^2.5.4",
-    "firebase": "^7.2.2",
-    "rxjs": "~6.5.1",
+    "firebase": "^10.3.0",
+    "rxjs": "^6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~15.0.4",
-    "@angular-devkit/core": "~8.1.2",
-    "@angular-devkit/schematics": "~8.1.2",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/compiler-cli": "~15.0.4",
-    "@angular/language-service": "~8.1.2",
-    "@ionic/angular-toolkit": "~2.0.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "@angular-devkit/architect": "^0.1602.0",
+    "@angular-devkit/build-angular": "^15.0.4",
+    "@angular-devkit/core": "^8.1.2",
+    "@angular-devkit/schematics": "^8.1.2",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler": "^8.1.2",
+    "@angular/compiler-cli": "^15.0.4",
+    "@angular/language-service": "^8.1.2",
+    "@ionic/angular-toolkit": "^2.0.0",
+    "@types/jasmine": "^3.3.8",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^8.9.4",
+    "codelyzer": "^0.0.28",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-webview": "^4.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
+    "jasmine-core": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
+    "protractor": "^5.4.0",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.15.0",
     "typescript": "^4.8.2"
   },
   "description": "An Ionic project",
