[Fix] package.json

--- a/package.json
+++ b/package.json
@@ -10,71 +10,68 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "update": "ng update -C",
-    "cli": "ng update @angular/cli@8",
-    "core": "ng update @angular/core@9 -C",
-    "fire": "ng update @angular/fire"
+    "update": "ng update -C"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^16.2.2",
-    "@angular/compiler": "^16.2.2",
-    "@angular/core": "^16.2.2",
-    "@angular/fire": "^7.6.1",
-    "@angular/forms": "^16.2.2",
-    "@angular/platform-browser": "^16.2.2",
-    "@angular/platform-browser-dynamic": "^16.2.2",
-    "@angular/router": "^16.2.2",
-    "@ionic-native/camera": "^5.15.1",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/file": "^5.15.1",
-    "@ionic-native/keyboard": "^5.16.0",
-    "@ionic-native/native-keyboard": "^5.16.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^7.3.1",
-    "cordova-android": "^12.0.1",
-    "cordova-ios": "^7.0.0",
-    "cordova-plugin-camera": "^6.0.0",
-    "cordova-plugin-file": "^8.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-native-keyboard": "^2.0.5",
-    "core-js": "^3.32.1",
-    "firebase": "^10.3.0",
-    "rxjs": "^7.8.1",
-    "tslib": "^2.6.2",
-    "zone.js": "^0.13.1"
+    "@angular/common": "16.0.0",
+    "@angular/compiler": "16.0.0",
+    "@angular/core": "16.0.0",
+    "@angular/fire": "7.6.1",
+    "@angular/forms": "16.0.0",
+    "@angular/platform-browser": "16.0.0",
+    "@angular/platform-browser-dynamic": "16.0.0",
+    "@angular/router": "16.0.0",
+    "@ionic-native/camera": "5.0.0",
+    "@ionic-native/core": "5.0.0",
+    "@ionic-native/file": "5.0.0",
+    "@ionic-native/keyboard": "5.0.0",
+    "@ionic-native/native-keyboard": "5.0.0",
+    "@ionic-native/splash-screen": "5.0.0",
+    "@ionic-native/status-bar": "5.0.0",
+    "@ionic/angular": "7.3.1",
+    "cordova-android": "12.0.1",
+    "cordova-ios": "7.0.0",
+    "cordova-plugin-camera": "6.0.0",
+    "cordova-plugin-file": "8.0.0",
+    "cordova-plugin-ionic-keyboard": "2.2.0",
+    "cordova-plugin-native-keyboard": "2.0.5",
+    "core-js": "3.32.1",
+    "firebase": "10.3.0",
+    "rxjs": "7.5.0",
+    "tslib": "2.6.2",
+    "zone.js": "0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1602.0",
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular-devkit/core": "^16.2.0",
-    "@angular-devkit/schematics": "^16.2.0",
-    "@angular/cli": "^16.2.0",
-    "@angular/compiler": "^16.2.2",
-    "@angular/compiler-cli": "^16.2.2",
-    "@angular/language-service": "^16.2.2",
-    "@ionic/angular-toolkit": "^10.0.0",
-    "@types/jasmine": "^4.3.5",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^20.5.7",
-    "codelyzer": "^6.0.2",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-webview": "^5.0.0",
-    "cordova-plugin-splashscreen": "^6.0.2",
-    "cordova-plugin-statusbar": "^3.0.0",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "jasmine-core": "^5.1.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
-    "protractor": "^7.0.0",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "typescript": "^5.2.2"
+    "@angular-devkit/architect": "0.1602.0",
+    "@angular-devkit/build-angular": "16.0.0",
+    "@angular-devkit/core": "16.2.0",
+    "@angular-devkit/schematics": "16.2.0",
+    "@angular/cli": "16.2.0",
+    "@angular/compiler": "16.0.0",
+    "@angular/compiler-cli": "16.0.0",
+    "@angular/language-service": "16.0.0",
+    "@ionic/angular-toolkit": "10.0.0",
+    "@types/jasmine": "4.3.5",
+    "@types/jasminewd2": "2.0.3",
+    "@types/node": "20.5.7",
+    "codelyzer": "6.0.2",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-webview": "5.0.0",
+    "cordova-plugin-splashscreen": "6.0.2",
+    "cordova-plugin-statusbar": "3.0.0",
+    "cordova-plugin-whitelist": "1.3.3",
+    "jasmine-core": "5.1.1",
+    "jasmine-spec-reporter": "7.0.0",
+    "karma": "6.4.1",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "protractor": "7.0.0",
+    "ts-node": "10.9.1",
+    "tslint": "6.1.3",
+    "typescript": "4.9.3"
   },
   "description": "An Ionic project",
   "cordova": {
